# RecipeBoxV1

./: db.sqlite3  pyproject.toml
recipe/: settings.py  urls.py
recipe_box_v1/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
recipe_box_v1/migrations/: 0001_initial.py  0002_auto_20200807_1038.py  0002_favorites.py
static/: style.css
templates/: addauthor.html  addrecipe.html  author_detail.html  base_generic.html  favorites.html  index.html  login.html  navbar.html  recipe_detail.html  status.html
