[tool.poetry]
name = "Recipe_box_v1"
version = "0.1.0"
description = "2nd assesment using django with models and migration"
authors = ["sohail aslam <sohailaslam0707@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
